add rspec and capybara for post controller, model

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,5 +8,5 @@
 
 <br>
 <div class="new_post">
-  <%= link_to "New post", new_topic_post_path %>
+  <%= link_to "New post", new_post_path %>
 </div>
