--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,11 @@
-<%= form_for :post, url: posts_path do |f| %>
-  Title: <%= f.text_field :title %><br />
-  Body : <%= f.text_area :body %><br />
-  Author : <%= f.text_field :author %><br />
-  <%= f.hidden_field :topic_id, :value => params[:topic_id] %>
+<%= form_for @post do |f| %>
+  <%= f.label :topic_id, "Topic:" %>
+  <%= f.collection_select :topic_id, Topic.all, :id, :title, :prompt => true %><br /><%= @post.errors[:topic_id].join(',') %>
+  <%= f.label :title %>:
+  <%= f.text_field :title %><br /><span class="error"><%= @post.errors[:title].join(',') %></span><br />
+  <%= f.label :body %>:
+  <%= f.text_area :body %><br /><%= @post.errors[:body].join(',') %><br />
+  <%= f.label :author %>:
+  <%= f.text_field :author %><br /><%= @post.errors[:author].join(',') %><br />
   <%= f.submit %>
 <% end %>
